# GroupProjectC--2

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Course.cpp  Course.h  main.cpp
src/course_list_insert_in_order/: CourseListInsertInOrder.cpp
src/header/: CourseList.h
src/implementation/: CourseList.cpp
src/test_copy_assignment_op/: TestCopyAssignmentOp.cpp
src/test_copy_constructor/: TestCopyConstructor.cpp
src/test_function/: TestFunctions.cpp
src/the_big_three/: CourseListBigThree.cpp
